# AgentHub

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  requirements.txt  testfile.yaml
.cursor/rules/: agent-onboarding.mdc
docs/: manifest_format.html
examples/: doc_writer.yaml  friendly_tutor.yaml  github-actions-attestation.yaml  sample_agent.yaml  signed_agent_example.yaml
server/: app.py  models.py  requirements.txt
src/agenthub/: __init__.py  api_client.py  cli.py  database.py  help.py  identity.py  manifest.py  models.py  signing.py
